--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
             <li><a ng-href="#/map">Map</a></li>
+            <li><a ng-href="#/baum">Baum</a></li>
             <li><a ng-href="#/about">About</a></li>
           <li><a ng-href="#">Contact</a></li>
         </ul>
@@ -79,6 +80,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/map.js"></script>
+        <script src="scripts/controllers/baum.js"></script>
         <!-- endbuild -->
 </body>
 </html>
